// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input simple 1`] = `
Array [
  <div
    className="css-8o7sw6"
    title="Input"
  >
    <input
      className="css-17erkce"
      onBlur={[Function]}
      onChange={[MockFunction]}
      onFocus={[Function]}
      placeholder="Placeholder"
      value="value"
    />
  </div>,
  <div
    className="css-8o7sw6"
  >
    <input
      className="css-16fuuzx"
      onBlur={[Function]}
      onChange={[MockFunction]}
      onFocus={[Function]}
      placeholder="Filter by uri, uuid, role, alias or labels"
      value="value"
    />
    <div
      className="css-qidtvj"
    >
      <svg
        className="css-p78i9h"
        viewBox="0 0 16 16"
      >
        <use
          xlinkHref="#search"
        />
      </svg>
    </div>
  </div>,
]
`;

exports[`Input with left-/rightElement 1`] = `
Array [
  <div
    className="css-djig4t"
  >
    <button
      className="css-v6zhl2"
      onClick={[Function]}
      type="button"
    >
      Filter
      <svg
        className="css-p9abg5"
        viewBox="0 0 14 14"
      >
        <use
          xlinkHref="#chevron-up"
        />
      </svg>
    </button>
    <input
      className="css-6lzrz7"
      onBlur={[Function]}
      onChange={[MockFunction]}
      onFocus={[Function]}
      placeholder="Filter by uri, uuid, role, alias or labels"
      value="value"
    />
    <div
      className="css-qidtvj"
    >
      <svg
        className="css-1grsr1t"
        onClick={[Function]}
        viewBox="0 0 16 16"
      >
        <use
          xlinkHref="#cancel"
        />
      </svg>
    </div>
  </div>,
  <div
    className="css-118hru8"
  >
    <input
      className="css-6lzrz7"
      onBlur={[Function]}
      onChange={[MockFunction]}
      onFocus={[Function]}
      placeholder="Filter by uri, uuid, role, alias or labels"
      value="value"
    />
    <div
      className="css-qidtvj"
    >
      <svg
        className="css-p78i9h"
        viewBox="0 0 16 16"
      >
        <use
          xlinkHref="#search"
        />
      </svg>
    </div>
    <button
      className="css-v6zhl2"
      onClick={[Function]}
      type="button"
    >
      Filter
      <svg
        className="css-p9abg5"
        viewBox="0 0 14 14"
      >
        <use
          xlinkHref="#chevron-up"
        />
      </svg>
    </button>
  </div>,
]
`;
